# pulseboard

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml  package.json
apps/api-gateway/: Dockerfile  package.json  tsconfig.json
apps/api-gateway/src/: app.module.ts  main.ts
apps/api-gateway/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  (+1 more)
apps/web/: Dockerfile  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
docs/: 00-OVERVIEW.md  01-MARKET-POSITIONING.md  04-ARCHITECTURE.md  06-CONNECTOR-FRAMEWORK.md  08-MULTI-TENANCY.md  10-SECURITY-AUTH.md  11-INFRASTRUCTURE.md  13-RISK-REGISTER.md  PROGRESS.md  README.md
docs/architecture/: database-schema.md  decisions.md  overview.md  semantic-layer.md  websocket-gateway.md
docs/guides/: docker.md  getting-started.md
docs/planning/: 02-REQUIREMENTS.md  03-TECHNOLOGY-EVALUATION.md  04-ARCHITECTURE.md  05-SEMANTIC-LAYER.md  06-CONNECTOR-FRAMEWORK.md  07-DATA-PIPELINE.md  08-MULTI-TENANCY.md  09-FRONTEND-DASHBOARDS.md  10-SECURITY-AUTH.md  12-IMPLEMENTATION-ROADMAP.md  13-RISK-REGISTER.md  14-NATURAL-LANGUAGE-QUERIES.md  15-OBJECT-STORAGE.md  16-DATA-LIFECYCLE.md
pipelines/: Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
pipelines/pulseboard_etl/: __init__.py  definitions.py  jobs.py
pipelines/pulseboard_etl/connectors/: __init__.py  database.py
pipelines/pulseboard_etl/resources/: __init__.py  platform_db.py  warehouse_db.py
pipelines/pulseboard_etl/sensors/: __init__.py  sync_sensor.py
(+35 files in other folders)
