[project]
name = "pulseboard-etl"
version = "0.1.0"
description = "Pulseboard ETL pipelines — Dagster-based data extraction and loading"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "dagster-postgres>=0.25.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "polars>=1.0.0",
    "nats-py>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "pulseboard_etl"
